# pulumi-acme

./: .ci-mgmt.yaml  .gitignore  .golangci.yml  .goreleaser.yml  .upgrade-config.yml  CHANGELOG.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  Makefile  README-PROVIDER.md  dagger.json  go.work  go.work.sum
.devcontainer/: Dockerfile  devcontainer.json
.github/: renovate.json
.github/workflows/: build_provider.yml  build_sdk.yml  license.yml  lint.yml  main.yml  prerequisites.yml  publish.yml  pull-workflow-changes.yml  release.yml  resync-build.yml  test.yml  upgrade-bridge.yml  upgrade-provider.yml  verify-release.yml
dagger/: dagger.gen.go  go.mod  main.go
deployment-templates/: README-DEPLOYMENT.md
examples/: .gitignore  examples_nodejs_test.go  examples_py_test.go  examples_test.go  go.mod  go.sum
provider/: go.mod  go.sum  resources.go
sdk/: .gitignore  go.mod  go.sum
sdk/dotnet/: Certificate.cs  GetServerUrl.cs  Provider.cs  Pulumi.yaml  Pulumiverse.Acme.csproj  README.md  Registration.cs  Utilities.cs  pulumi-plugin.json
sdk/dotnet/Config/: Config.cs
sdk/go/: Pulumi.yaml
sdk/nodejs/: Pulumi.yaml  README.md  certificate.ts  getServerUrl.ts  index.ts  package-lock.json  package.json  provider.ts  registration.ts  tsconfig.json  utilities.ts
sdk/python/: Pulumi.yaml  README.md  pyproject.toml  setup.py
sdk/python/pulumiverse_acme/: README.md  __init__.py  _inputs.py  _utilities.py  certificate.py  get_server_url.py  outputs.py  provider.py  pulumi-plugin.json  registration.py
sdk/python/pulumiverse_acme/config/: __init__.pyi  vars.py
(+48 files in other folders)
